--- a/style.css
+++ b/style.css
@@ -988,7 +988,6 @@ body {
 .tunstall-our-track-record-parent {
   display: flex;
   flex-wrap: wrap;
-  background: #eee;
   padding: 10px;
   justify-content: center;
 }
@@ -997,7 +996,6 @@ body {
   width: 25%;
   display: flex;
   justify-content: center;
-  background: #eee;
   padding: 10px 10px;
 }
 
@@ -1022,4 +1020,31 @@ body {
     width: 50%;
     padding: 5px 5px;
   }
+}
+
+
+.slick-prev {
+  left: -40px;
+  width: 0;
+  height: 0;
+  border-left: 0 solid transparent;
+  border-right: 15px solid #113463;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  cursor: pointer;
+  overflow: hidden;
+  background: transparent !important;
+}
+
+.slick-next {
+  cursor: pointer;
+  right: -40px;
+  width: 0;
+  height: 0;
+  border-right: 0 solid transparent;
+  border-left: 15px solid #113463;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  overflow: hidden;
+  background: transparent !important;
 }
